# sisco

./: .easignore  .gitignore  README.md  iniciar_sisco.ps1  models.py  script.sql
backend/: db_sisco.sqlite3  gunicorn.conf.py  manage.py  requirements.txt
backend/maestros/: models.py  serializers.py  tests.py  urls.py  views.py
backend/maestros/migrations/: 0001_initial.py  0002_normalize_perfiles.py  0003_ensure_default_garita.py
backend/movimientos/: models.py  serializers.py  tests.py  urls.py  views.py
backend/movimientos/migrations/: 0001_initial.py  0002_alter_cabcierreturno_ch_codi_turno_caja_and_more.py  0003_normalize_turno_codes.py
backend/reportes/: urls.py  views.py
backend/seguridad/: access.py  authentication.py  data_exchange.py  middleware.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/sisco_backend/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: .env.development  .env.production  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: main.rs
frontend/src/api/: axios.js
frontend/src/components/: DataTable.jsx  EditableTable.jsx  FormModal.jsx  Layout.jsx  Sidebar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Login.jsx
frontend/src/styles/: tokens.js
frontend/src/utils/: turno.js
mobile/: .env  App.js  app.json  package-lock.json
mobile/dist-mobile/: metadata.json
mobile/src/: MainApp.js
(+39 files in other folders)
