[package]
name = "sisco"
version = "0.1.0"
description = "SISCO - Sistema de Control de Cochera"
authors = []
edition = "2021"

[lib]
name = "sisco_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
